payment faild page completed

--- a/CinemaTicketingSystem.Web/wwwroot/css/admin-dashboard.css
+++ b/CinemaTicketingSystem.Web/wwwroot/css/admin-dashboard.css
@@ -1,5 +1,12 @@
 ﻿/* 🎯 Admin Dashboard Styles */
 
+#wrapper {
+    display: flex;
+    height: 100vh; /* Full height of the viewport */
+    overflow: hidden; /* Prevent extra space or scrolling */
+}
+
+
 /* Sidebar */
 #sidebar-wrapper {
     min-width: 250px;
