--- a/CinemaTicketingSystem.Web/Views/Reservation/ProceedBookingSeat.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Reservation/ProceedBookingSeat.cshtml
@@ -6,6 +6,19 @@
 }
 @Html.AntiForgeryToken()
 
+
+@{
+    if (TempData["error"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>⚠️ Error!</strong> @TempData["error"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+}
+
+
+
 <div class="container py-4">
     <h2 class="text-center mb-4 fw-bold text-primary">🎟️ Seat Selection</h2>
 
