--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -25,7 +25,7 @@
             <div class="list-group list-group-flush flex-grow-1">
                 <a asp-controller="Admin" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🏠 Dashboard</a>
                 <a asp-controller="ShowTime" asp-action="ShowTimeManagement" class="list-group-item list-group-item-action text-white bg-dark">⏳ Manage ShowTimes</a>
-                <a asp-controller="Reservation" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🎟️ Manage Reservations</a>
+                <a asp-controller="Reservation" asp-action="ManageReservation" class="list-group-item list-group-item-action text-white bg-dark">🎟️ Manage Reservations</a>
                 <a asp-controller="Movie" asp-action="ManageMovie" class="list-group-item list-group-item-action text-white bg-dark">🎥 Manage Movies</a>
                 <a asp-controller="Theatre" asp-action="ManageTheatre" class="list-group-item list-group-item-action text-white bg-dark">🏢 Manage Theatres</a>
                 <a asp-controller="Account" asp-action="AdminUserManager" class="list-group-item list-group-item-action text-white bg-dark">👤 Manage Users</a>
