--- a/CinemaTicketingSystem.Web/Views/Account/UpdateUser.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Account/UpdateUser.cshtml
@@ -43,10 +43,10 @@
             <div class="mb-4">
                 <label asp-for="Roles" class="form-label fw-bold">⚙️ Roles</label>
                 <select class="form-select" asp-for="Roles">
-                    <option value="" disabled>Select a role</option>
+                    <option value="" disabled>-- Select a role --</option>
                     @foreach (var role in Model.AllRoles)
                     {
-                        <option value="@role" >@role</option>
+                        <option value="@role"> @role </option>
                     }
                 </select>
             </div>
