--- a/CinemaTicketingSystem.Web/Views/Account/Login.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Account/Login.cshtml
@@ -53,7 +53,7 @@
 
                     <!-- Forgot Password and Register Links -->
                     <div class="text-center mt-3">
-                        <a href="#" class="text-decoration-none">Forgot Password?</a> |
+                        <a asp-action="ForgotPassword" class="text-decoration-none">Forgot Password?</a> |
                         <a asp-action="Register" class="text-decoration-none">Create an Account</a>
                     </div>
                 </form>
